# libinternalfield

./: .gitignore  CMakeLists.txt  README.md  compile.bat  libinternalfield.h  makefile
.github/workflows/: ci.yml
include/: internalfield.h  internalfield.h.test  internalfieldc.h
libinternalfield/: CodeGen.py  EncodeCoefficients.py  coeffs.cc  coeffs.h  compile.bat  internal.cc  internal.h  internalmodel.cc  internalmodel.h  libinternal.cc  libinternal.h  listmapkeys.h  makefile  models.cc  models.h
libinternalfield/codegen/: coeffs.cc.1  coeffs.cc.2  coeffs.cc.3  coeffs.cc.4  coeffs.h.0  coeffs.h.1  coeffs.h.2  libinternalfield.h.0  models.cc.1  models.cc.2  models.h.1
libinternalfield/coeffs/: gsfc13ev.cc  gsfc13ev.h  gsfc15ev.cc  gsfc15ev.h  gsfc15evs.cc  gsfc15evs.h  gsfco8.cc  isaac.cc  isaac.h  jpl15ev.cc  jpl15ev.h  jpl15evs.cc  jpl15evs.h  jrm09.cc  jrm09.h  jrm33.cc  jrm33.h  langlais2019.cc  langlais2019.h  ness1975.cc  ness1975.h  o4.cc  o4.h  o6.cc  o6.h  p11a.cc  p11a.h  sha.cc  sha.h  u17ev.cc  u17ev.h  v117ev.cc  v117ev.h  vip4.cc  vip4.h  vipal.cc  vipal.h  vit4.cc  vit4.h
libinternalfield/test/: compile.bat  makefile  maptest  maptest.cc  stringarray  stringarray.cc  test  test.cc  test.h  timer  timer.cc
src/: CodeGen.py  GenerateCode.py  coeffs.cc  coeffs.h  compile.bat  compileobj.bat  internal.cc  internal.h  internalmodel.cc  internalmodel.h  libinternal.cc  libinternal.h  makefile  models.cc  models.h  readcoeffs.cc  readcoeffs.h  variable.cc  variable.h
src/codegen/: ConvertDatCpp.py  EncodeCoeffBinary.py  EncodeVariableBinary.py  GenerateCode.py  GenerateCoeffsCC.py  GenerateCoeffsH.py  GenerateLibHeader.py  GenerateModelObjects.py  GenerateModelsCC.py  GenerateModelsH.py  GenerateVarObjects.py  ListCoeffBinFiles.py  ListCoeffCppFiles.py  ListCoeffDatFiles.py  ListFiles.py  ListModelNames.py  ListVariableModels.py  MakeCoeffObject.py  MakeVariableObject.py  ProcessIGRF.py  ReadASCII.py  ReadVariableDat.py  WriteASCII.py  WriteCoeffCpp.py  __init__.py  coeffs.cc  coeffs.h  compile.bat  compileobj.bat  igrf.cc  igrf.h  main.cc  main.h  makefile  modelindex.cc  modelindex.h  models.cc  models.h  savecoeffs  savecoeffs.cc  (+10 more)
src/codegen/template/: coeffs.h.0  coeffs.h.1
src/coeffs/earth/: igrf1900.cc  igrf1905.cc  igrf1910.cc  igrf1915.cc  igrf1920.cc  igrf1925.cc  igrf1930.cc  igrf1935.cc  igrf1940.cc  igrf1945.cc  igrf1950.cc  igrf1955.cc  igrf1960.cc  igrf1965.cc  igrf1970.cc  igrf1975.cc  igrf1980.cc  igrf1985.cc  igrf1990.cc  igrf1995.cc  igrf2000.cc  igrf2005.cc  igrf2010.cc  igrf2015.cc  igrf2020.cc  igrf2025.cc
src/coeffs/ganymede/: kivelson2002a.cc  kivelson2002b.cc  kivelson2002c.cc  weber2022dip.cc  weber2022quad.cc
src/coeffs/jupiter/: gsfc13ev.cc  gsfc15ev.cc  gsfc15evs.cc  isaac.cc  jpl15ev.cc  jpl15evs.cc  jrm09.cc  jrm33.cc  o4.cc  o6.cc  p11a.cc  sha.cc  u17ev.cc  v117ev.cc  vip4.cc  vipal.cc  vit4.cc
src/coeffs/mars/: cain2003.cc  gao2021.cc  langlais2019.cc  mh2014.cc
src/coeffs/mercury/: anderson2010d.cc  anderson2010dsha.cc  anderson2010dts04.cc  anderson2010q.cc  anderson2010qsha.cc  anderson2010qts04.cc  anderson2010r.cc  anderson2012.cc  ness1975.cc  thebault2018m1.cc  thebault2018m2.cc  thebault2018m3.cc  uno2009.cc  uno2009svd.cc
src/coeffs/neptune/: gsfco8.cc  gsfco8full.cc  nmoh.cc
src/coeffs/saturn/: burton2009.cc  cassini11.cc  cassini3.cc  cassini5.cc  p1184.cc  p11as.cc  soi.cc  spv.cc  v1.cc  v2.cc  z3.cc
src/coeffs/uranus/: ah5.cc  gsfcq3.cc  gsfcq3full.cc  umoh.cc
test/: CMakeLists.txt  README.md  cmake_test_discovery_3fc545fc12.json  coefftest  coefftest.cc  cpptest  cpptest.cc  ctest  ctest.c  gtest_unit.cc  makefile  savetestdata  savetestdata.cc  savetestdata.h  test  test.cc  testdata.cc  testdata.h  timer  timer.cc  timer.h
test/save_test_data/: savetestdata.cc  savetestdata.h
tools/coeff_registry_codegen/: CMakeLists.txt  coeff_registry_codegen  main.cc  makefile  scalegh.cc  scalegh.h  schmidt.cc  schmidt.h  schmidt_test.cc
